# devgen-splitter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  rust.yml
examples/: multi_language_split.rs
queries/: java.scm  python.scm  rust.scm  solidity.scm  typescript.scm
src/: lang.rs  lib.rs  spliter.rs  splitter.rs
src/lang/: queries.rs
src/spliter/: rust_spliter.rs
src/splitter/: context_splitter.rs  entity_splitter.rs  lang_splitter.rs  line_spliter.rs  rust_splitter.rs  test_java.rs  test_python.rs  test_rust.rs  test_solidity.rs  test_ts.rs
tests/: test_bash_splitter.rs  test_cpp_splitter.rs  test_cs_splitter.rs  test_java_splitter.rs  test_md_splitter.rs  test_php_splitter.rs  test_python_splitter.rs  test_r_splitter.rs  test_ruby_splitter.rs  test_rust_splitter.rs  test_solidity_splitter.rs  test_sql_splitter.rs  test_swift_splitter.rs  test_toml_splitter.rs  test_ts_splitter.rs
tests/cases/bash/: test_script.sh
tests/cases/cpp/: test.cc
tests/cases/cs/: Example.cs
tests/cases/java/: test_java.java
tests/cases/md/: test.md
tests/cases/php/: example_script.php
tests/cases/python/: test_octogen.py
tests/cases/r/: Library.R  Package.r
tests/cases/ruby/: example.rb
tests/cases/rust/: large_field.rs  rust_function_in_mod.rs  rust_function_test.rs  rust_long_function.rs  rust_method_for_incomplete_block.rs  rust_similar_case.rs  rust_tonic_case.rs
tests/cases/solidity/: test_db3_meta.sol
tests/cases/sql/: test_sql.sql  test_sql_large_query.sql
tests/cases/swift/: GameView.swift  test.swift
tests/cases/toml/: test.toml
tests/cases/ts/: typescript_function_class.ts  typescript_function_test.ts  typescript_react_test.ts
